...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="compareSelectedJob"
            android:text="compare selected Jobs" />

        <Button
            android:id="@+id/rankReturnID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rankReturnMainMenu"
            android:text="return to MainMenu" />

    </LinearLayout>
...
